--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-  "name": "ixlos-courses-client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
-    "next": "15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "sass": "^1.83.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "ixlos-courses-client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^5.62.10",
+		"@types/js-cookie": "^3.0.6",
+		"axios": "^1.7.9",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.15.0",
+		"jose": "^5.9.6",
+		"js-cookie": "^3.0.5",
+		"next": "15.1.2",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-google-recaptcha": "^3.1.0",
+		"react-hook-form": "^7.54.2",
+		"react-hot-toast": "^2.4.1",
+		"sass": "^1.83.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tanstack/react-query-devtools": "^5.62.10",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/react-google-recaptcha": "^2.1.9",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.2",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
